# sat-sum

./: .gitignore  CMakeLists.txt  README.md  main.c
main/: main.c
src/: main.c  sum.c  sum.h
test/: main.c
